# AndroidLameEncoder

./: .gitignore  README.md  settings.gradle
AndroidLameEncoder/: .cproject  .project  AndroidManifest.xml
AndroidLameEncoder/jni/: Android.mk  lame_encoder.c
AndroidLameEncoder/jni/liblame-3.99.5/: util.h
AndroidLameEncoder/res/layout/: activity_main.xml  activity_record.xml
AndroidLameEncoder/res/values/: strings.xml
AndroidLameEncoder/src/com/hzy/lame/: LameEncoder.java
AndroidLameEncoder/src/com/hzy/lamedemo/: CommonUtils.java  MainActivity.java  Mp3Recorder.java  RecordActivity.java
AndroidLameEncoder/src/com/hzy/lameencoder/: LameEncoder.java
demo/: build.gradle
demo/src/androidTest/java/com/hzy/lame/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/hzy/lame/demo/: CommonUtils.java  MainActivity.java  MainApplication.java  Mp3Recorder.java
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml
demo/src/test/java/com/hzy/lame/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
liblame/: build.gradle
liblame/src/androidTest/java/com/hzy/lame/: ExampleInstrumentedTest.java
liblame/src/main/: AndroidManifest.xml
liblame/src/main/cpp/: CMakeLists.txt  lame_encoder.c
liblame/src/main/cpp/liblame/: config.h
liblame/src/main/java/com/hzy/lame/: LameEncoder.java
liblame/src/test/java/com/hzy/lame/: ExampleUnitTest.java
